adicionando atributos na tarefa

--- a/lab2/todoList/conf/application.conf
+++ b/lab2/todoList/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="p;dW_VYik<:Vylmm=T8]^t/v`@]n<X>XQBUY2pP3EaNOKZUwYM:6FW0gF4oJ
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="pt-BR"
 
 # Global object class
 # ~~~~~
